# Titanic-effort

./: .gitignore  Dockerfile  Makefile  README.md  encrypted_keys.txt  requirements.txt  setup.cfg  setup.py
.dvc/: config
.github/workflows/: CICD.yaml  model_validation.yaml  monitoring.yaml
api/: main.py  requirements.txt
api/app/: models.py  utils.py  views.py
data/: train.csv.dvc  validation.csv.dvc
github/workflows/: CICD.yaml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: myckp_train.yml  myckp_validation.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/train/csv/: warning.json
models/: best_model.pkl.dvc
notebooks/: preprocessing.ipynb
src/: CLI.py  configs.py
src/ml-core/: train.py
src/ml_core/: __init__.py  train.py  validation.py
src/ml_pipelines/: __init__.py  feature_selection.py  model_training.py  pipeline_connection.py
src/pipelines/: __init__.py  model_trainig.py
src/utils/: __init__.py  data_functions.py  keys_extraction.py  utils.py
tests/: test_keys_extraction.py
tests/test_api/: test_api.py
tests/test_ml_core/: test_train.py  test_validation.py
tests/test_pipelines/: test_feature_selection.py  test_model_training.py  test_pipeline_connection.py
tests/test_utils/: test_data_functions.py  test_keys_extraction.py  test_utils.py
titanic_effort/.dvc/tmp/: lock
