[metadata]
name = titanic_effort
version = 0.1.0
author = Santiago Prado
author_email = santiago.prado@rappi.com
description = A small package to predict the survival of Titanic passengers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/santiagoprado12/Titanic-effort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
pandas==2.0.3
scikit-learn==1.3.0
dvc[s3]==3.15.1
cryptography==41.0.3
pytest==7.4.0
pytest-cov==4.1.0
typer==0.9.0

[options.entry_points]
console_scripts =
    cli = src.CLI