[metadata]
name = titanic_effort
version = 0.1.0
author = Santiago Prado
author_email = santiago.prado@rappi.com
description = A small package to predict the survival of Titanic passengers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/santiagoprado12/Titanic-effort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]


[options.entry_points]
console_scripts =
    titanic-cli = src.CLI